--- a/bsconfig.json
+++ b/bsconfig.json
@@ -2,17 +2,16 @@
   "name": "elm-gen",
   "version": "0.0.1",
   "sources": {
-    "dir" : "src",
-    "subdirs" : true
+    "dir": "src/cli",
+    "subdirs": true
   },
   "package-specs": {
     "module": "commonjs",
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dependencies": [
-  ],
+  "bs-dependencies": [],
   "warnings": {
-    "error" : "+101"
-  },
+    "error": "+101"
+  }
 }
