--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "elm-gen",
   "version": "0.0.1",
+  "description": "Generate your own Elm modules",
+  "funding": "https://issuehunt.io/r/orasund",
   "files": [
     "src/cli/"
   ],
@@ -18,6 +20,10 @@
   ],
   "author": "Orasund",
   "license": "BSD-3-Clause",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Orasund/elm-gen.git"
+  },
   "dependencies": {
     "fs-extra": "^10.1.0",
     "handlebars": "^4.7.7"
